2013-08-28  Dean Jackson  <dino@apple.com>

        [WebGL] CoreGraphics can provide greyscale image data
        https://webkit.org/b/120443

        Reviewed by Simon Fraser.

        CoreGraphics can decode greyscale or greyscale+alpha images
        while preserving the format. Our WebGL texture unpacker
        was seeing this and assuming it meant the data did not come
        from an <img> element. Since that method already special cased
        CoreGraphics, the fix was to simply return true for these
        extra types.

        I also renamed srcFormatComeFromDOMElementOrImageData
        to srcFormatComesFromDOMElementOrImageData.

        Test: fast/canvas/webgl/tex-image-with-greyscale-image.html

        * platform/graphics/GraphicsContext3D.cpp: Call new name.
        * platform/graphics/GraphicsContext3D.h:
        (WebCore::GraphicsContext3D::srcFormatComesFromDOMElementOrImageData):
        Add support for R8, AR8, A8, and RA8 data formats.

2013-08-28  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] HTMLElement lost setID and getID - need to add compatibility symbols
        https://bugs.webkit.org/show_bug.cgi?id=120440

        Reviewed by Martin Robinson.

        No tests, just adding compatibility symbols.

        setID and getID were removed, and the parent class (Element) ones should be used instead.
        We need to keep our ABI compatible, though, so add compatibility symbols.

        * bindings/gobject/WebKitDOMCustom.cpp:
        (webkit_dom_html_element_get_id):
        (webkit_dom_html_element_set_id):
        * bindings/gobject/WebKitDOMCustom.h:

2013-08-28  Simon Fraser  <simon.fraser@apple.com>

        Fix compositing layers in columns
        https://bugs.webkit.org/show_bug.cgi?id=120436

        Reviewed by Dave Hyatt.
        
        Remove the old hack in RenderLayer::updateLayerPosition() for placing
        layers in columns, which changed the layer position for composited